--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.2",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-mirage": "^1.1.6",
     "ember-cli-postcss": "^5.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
@@ -60,6 +61,7 @@
     "edition": "octane"
   },
   "dependencies": {
+    "faker": "^4.1.0",
     "tailwindcss": "^1.2.0"
   }
 }
